@@ -2,6 +2,7 @@
 
 package gizz.tapes.ui.player
 
+import androidx.compose.animation.AnimatedContent
 import androidx.compose.foundation.basicMarquee
 import androidx.compose.foundation.layout.Arrangement
 import androidx.compose.foundation.layout.Box
@@ -26,6 +27,7 @@ import androidx.compose.material3.ExperimentalMaterial3Api
 import androidx.compose.material3.Icon
 import androidx.compose.material3.IconButton
 import androidx.compose.material3.IconButtonDefaults
+import androidx.compose.material3.LinearProgressIndicator
 import androidx.compose.material3.MaterialTheme
 import androidx.compose.material3.Scaffold
 import androidx.compose.material3.Slider
@@ -155,17 +157,38 @@ fun FullPlayer(
                         sliderValue = playerState.durationInfo.currentPositionFloat
                     }
 
-                    Slider(
-                        value = sliderValue,
-                        onValueChange = {
-                            sliderValue = it
+                    AnimatedContent(
+                        targetState = playerState,
+                        modifier = Modifier.padding(horizontal = 16.dp),
+                        contentKey = { current ->
+                            when(current) {
+                                is PlayerState.MediaLoaded.Loading -> "Loading"
+                                else -> "Media Loaded"
+                            }
                         },
-                        onValueChangeFinished = {
-                            seekTo(sliderValue.toLong())
-                        },
-                        valueRange = 0f .. max(playerState.durationInfo.duration.toFloat(), 0f),
-                        modifier = Modifier.padding(horizontal = 16.dp)
-                    )
+                        label = "Full Player Loading State"
+                    ) { s ->
+                        when (s) {
+                            is PlayerState.MediaLoaded.Loading -> LinearProgressIndicator(
+                                modifier = Modifier.fillMaxWidth()
+                                    .padding(vertical = 8.dp),
+                            )
+
+                            else -> Slider(
+                                value = sliderValue,
+                                onValueChange = {
+                                    sliderValue = it
+                                },
+                                onValueChangeFinished = {
+                                    seekTo(sliderValue.toLong())
+                                },
+                                valueRange = 0f..max(
+                                    playerState.durationInfo.duration.toFloat(),
+                                    0f
+                                )
+                            )
+                        }
+                    }
 
                     Row(
                         modifier = Modifier
